@@ -3,11 +3,11 @@ package ar.dev.jofrelautaro.reservation_backend.security;
 import lombok.RequiredArgsConstructor;
 
 import java.util.Arrays;
-import java.util.List;
+
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
+
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -16,7 +16,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
+
 
 @Configuration
 @EnableWebSecurity
@@ -32,14 +32,15 @@ public class SecurityConfig {
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource())) 
                 .authorizeHttpRequests(auth -> auth
+                        
+                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
+                        
                         .requestMatchers("/api/auth/**", "/api/auth/google").permitAll()
                         .requestMatchers(org.springframework.http.HttpMethod.GET,"/api/cursos", "/api/cursos/**").permitAll()
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        .requestMatchers("/api/ws-chat/**").permitAll()
-                        .requestMatchers("/api/ws-chat").permitAll()
+                        .requestMatchers("/api/ws-chat/**", "/api/ws-chat").permitAll()
                         .anyRequest().authenticated()
                 )
-                // 👇 ESTAS DOS LÍNEAS SON LA CLAVE PARA QUE LEA EL TOKEN 👇
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
@@ -50,12 +51,17 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // 1. Quién puede entrar (tu frontend de Vite)
-        configuration.setAllowedOriginPatterns(List.of("http://localhost:5173", "https://devcursos-lj.vercel.app"));
+        // Usar setAllowedOrigins es más estricto y compatible con Vercel
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5173", 
+                "https://devcursos-lj.vercel.app"
+        ));
         configuration.setAllowCredentials(true);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of("Authorization"));
+        
+        // Permitimos cabeceras esenciales explícitamente
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -63,11 +69,4 @@ public class SecurityConfig {
         return source;
     }
 
-    @Bean
-    public FilterRegistrationBean<CorsFilter> corsFilterRegistrationBean() {
-        CorsFilter corsFilter = new CorsFilter(corsConfigurationSource());
-        FilterRegistrationBean<CorsFilter> bean = new FilterRegistrationBean<>(corsFilter);
-        bean.setOrder(0);
-        return bean;
-    }
 }
